[package]
name = "dumb-exec"
version = "0.0.2"
authors = ["Angelo Bulfone <mbulfone@gmail.com>"]
keywords = ["futures"]
categories = ["asynchronous", "no-std"]
license = "MIT"
repository = "https://github.com/boomshroom/dumb-exec"
description = """
A very simple and dumb implementation of a futures executor
that doesn't allocate and can be used in no_std environments.
"""

[dependencies.futures-preview]
version = "0.3.0-alpha"
default-features = false
features = ["nightly"]