[package]
name = "dumb-exec"
version = "0.0.7"
edition = "2018"
authors = ["Angelo Bulfone <mbulfone@gmail.com>"]
keywords = ["futures"]
categories = ["asynchronous", "no-std"]
license = "MIT"
repository = "https://github.com/boomshroom/dumb-exec"
homepage = "https://github.com/boomshroom/dumb-exec"
readme = "README.md"
description = """
A very simple and dumb implementation of a futures executor
that doesn't allocate and can be used in no_std environments.
"""

[features]
default = []
alloc = []

[dependencies]
spin = "0.4.9"
pin-utils = "0.1.0-alpha"

[dependencies.futures-preview]
version = "0.3.0-alpha.7"
features = ["nightly"]